// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Menu should initially be hidden 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: none;"
  />,
]
`;

exports[`Context Menu should show the default actions mouse 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the default actions touch 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the legend actions mouse 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; left: 0px; top: calc(0px - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Toggle Visibility
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu should show the legend actions touch 1`] = `
HTMLCollection [
  <div
    class="ag-charts-context-menu"
    style="display: block; top: calc(NaNpx - 0.5em);"
  >
    <div
      aria-orientation="vertical"
      class="ag-charts-context-menu__menu"
      role="menu"
      tabindex="-1"
    >
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Download
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
      <div
        aria-disabled="false"
        class="ag-charts-context-menu__item"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="ag-charts-context-menu__icon"
        />
        <div
          class="ag-charts-context-menu__label ag-charts-context-menu__cellpadding"
        >
          Toggle Visibility
        </div>
        <div
          class="ag-charts-context-menu__rightarrowhead"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Context Menu submenu cycle detection 1`] = `
[
  [
    "AG Charts - cycle detected in array",
    {
      "items": [
        {
          "action": [Function],
          "label": "subaction",
          "type": "action",
        },
        {
          "items": [
            "defaults",
            "separator",
            {
              "action": [Function],
              "label": "my action",
              "type": "action",
            },
            [Circular],
          ],
          "label": "subsubmenu",
        },
      ],
      "label": "my submenu",
    },
  ],
]
`;

exports[`Extra Actions - deprecated callbacks 1`] = `
[
  [
    "AG Charts - Property [extraActions] is deprecated. Use [items] instead",
  ],
  [
    "AG Charts - Property [extraSeriesAreaActions] is deprecated. Use [items] instead",
  ],
  [
    "AG Charts - Property [extraNodeActions] is deprecated. Use [items] instead",
  ],
  [
    "AG Charts - Property [extraLegendItemActions] is deprecated. Use [items] instead",
  ],
]
`;

exports[`Extra Actions - deprecated callbacks 2`] = `
[
  {
    "args": [
      {
        "event": "<Event>",
        "type": "contextMenuEvent",
      },
    ],
    "label": "myExtraAction",
  },
  {
    "args": [
      {
        "event": "<Event>",
        "type": "seriesContextMenuAction",
      },
    ],
    "label": "myExtraSeriesAreaAction",
  },
  {
    "args": [
      CartesianSeriesNodeEvent {
        "datum": {
          "hats": 50,
          "month": "Jul",
          "sweaters": 70,
        },
        "defaultPrevented": false,
        "event": "<Event>",
        "seriesId": "BarSeries-1",
        "type": "nodeContextMenuAction",
        "xKey": "month",
        "yKey": "sweaters",
      },
    ],
    "label": "myExtraNodeAction",
  },
  {
    "args": [
      CartesianSeriesNodeEvent {
        "datum": {
          "hats": 30,
          "month": "Aug",
          "sweaters": 60,
        },
        "defaultPrevented": false,
        "event": "<Event>",
        "seriesId": "BarSeries-2",
        "type": "nodeContextMenuAction",
        "xKey": "month",
        "yKey": "hats",
      },
    ],
    "label": "myExtraNodeAction",
  },
  {
    "args": [
      {
        "event": "<Event>",
        "itemId": "sweaters",
        "seriesId": "BarSeries-1",
        "type": "contextmenu",
      },
    ],
    "label": "myExtraLegendItemAction",
  },
  {
    "args": [
      {
        "event": "<Event>",
        "itemId": "hats",
        "seriesId": "BarSeries-2",
        "type": "contextmenu",
      },
    ],
    "label": "myExtraLegendItemAction",
  },
]
`;
